# Transcriber-Pipeline

./: .gitignore  LICENSE  README.md  TESTING_SETUP_COMPLETE.md  audio_chunking_transcribe_pipeline_open_ai_4_o_transcribe.md  config.yaml  fileandfolderstructure.txt  pyproject.toml  requirements.txt  run_pipeline.py
audio_utils/: segmenter.py  stitcher.py  transcriber.py
config/: pipeline_config.py
logging_utils/: __init__.py  logging_config.py
outputs/20251001-183302/: manifest.json  transcript.json  transcript.srt  transcript.txt
outputs/20251001-185443/: effective_config.json  manifest.json  transcript.json  transcript.srt  transcript.txt
outputs/20251001-185610/: manifest.json  transcript.json  transcript.srt  transcript.txt
outputs/20251001-192630/: effective_config.json  manifest.json  transcript.json  transcript.srt  transcript.txt
src/transcribe_pipeline/: __init__.py  cli.py
src/transcribe_pipeline/audio_utils/: __init__.py  ffprobe.py  segmenter.py  transcriber.py
src/transcribe_pipeline/config/: __init__.py  pipeline_config.py
src/transcribe_pipeline/dependencies/: __init__.py  implementations.py  interfaces.py  mocks.py
src/transcribe_pipeline/logging_utils/: __init__.py
src/transcribe_pipeline/utils/: __init__.py  path_utils.py
tests/: README.md  __init__.py  conftest.py  run_tests.py
tests/unit/: test_config.py  test_ffprobe.py  test_transcriber.py
