[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcribe_pipeline"
version = "1.0.0"
description = "A robust audio transcription pipeline that chunks, transcribes, and stitches audio files using OpenAI's Whisper API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pedro Julio", email = "pmpmtj@hotmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40,<2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/pmpmtj/transcribe_pipeline"
Repository = "https://github.com/pmpmtj/transcribe_pipeline"
Issues = "https://github.com/pmpmtj/transcribe_pipeline/issues"

[project.scripts]
transcribe-pipeline = "transcribe_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe_pipeline"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
